[refactor]: ingest api/doc
